src/test/resources/Parser/SyntaxErrors/IncompatibleTypesReturn.front
class A:
    float64 test () {
        return;
    }